--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-mongodb+srv://gandhareji10:Jitugandhare@cluster0.fyr4dlc.mongodb.net/Tap-me?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://gandhareji10:Jitugandhare@cluster0.fyr4dlc.mongodb.net/Tap-me?retryWrites=true&w=majority&appName=Cluster0
